--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./Static/images/اساسيات/logoooo.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-    <title>Egyptian Burger</title>
+    <title>West Elbalad</title>
 </head>
 
 <body> 
@@ -24,11 +24,12 @@
         <h1 class="logo" href >Egyptian Burger</h1>
         <div class="sidebar-menus">
             <br>
-            <a href="https://www.facebook.com/Techno.Science.TC"><ion-icon name="logo-facebook"></ion-icon> صفحة الفيسبوك</a>
-            <a href="./Front-end/Pages/order.html"><ion-icon name="checkbox-outline"></ion-icon> أعداد طلب </a>
-            <a href="https://wa.me/+201147182463?text=مرحبا اريد التواصل معكم"><ion-icon name="logo-whatsapp"></ion-icon>تواصل معنا</a>
-            <a href="./Front-end/Pages/about.html"><ion-icon name="people-circle-outline"></ion-icon>من نحن</a>
-            <a href="./Front-end/Pages/feedback.html"><ion-icon name="people-circle-outline"></ion-icon>ترك فيدباك</a>
+            <a href="https://www.facebook.com/westelbaladofficial"><ion-icon name="logo-facebook"></ion-icon>صفحتنا ع الفيس</a>
+            <a href="https://www.tiktok.com/@westelbalad_official"><ion-icon name="logo-tiktok"></ion-icon>التيك توك بتعنا</a>
+            <a href="./Front-end/Pages/order.html"><ion-icon name="checkbox-outline"></ion-icon> كمل طلب </a>
+            <a href="https://wa.me/+201147182463?text=مرحبا اريد التواصل معكم"><ion-icon name="logo-whatsapp"></ion-icon>كلمنا</a>
+            <a href="./Front-end/Pages/about.html"><ion-icon name="people-circle-outline"></ion-icon>إحنا مين؟</a>
+            <a href="./Front-end/Pages/feedback.html"><ion-icon name="people-circle-outline"></ion-icon>قولنا رأيك</a>
         </div>
         <div class="menu-off">
             <a href="#" class="menu-off" ><ion-icon name="close-outline" ></ion-icon>close</a>
@@ -58,26 +59,24 @@
 
                   <div class="marqueee">
                     <div class="marqueee-content">
-                        <img src="./Static/images/ام علي.jpeg" alt="Image 1">
-                        <img src="./Static/images/سموزي بطيخ.webp" alt="Image 2">
-                        <img src="./Static/images/شـــــــاي.webp" alt="Image 3">
-                        <img src="./Static/images/فـــرابتشينو بـندق.jpg" alt="Image 4">
-                        <img src="./Static/images/قهـــوة تــركــي.jpg" alt="Image 5">
-                        <img src="./Static/images/قهوة بندق.webp" alt="Image 6">
-                        <img src="./Static/images/مــولــتن كيــك.jpg" alt="Image 7">
-                        <img src="./Static/images/مهيتــو بلـــوبيـــري.jpg" alt="Image 8">
-                        <img src="./Static/images/مهيتو كلاسيك.jpg" alt="Image 9">
-                        <img src="./Static/images/ميكس فروت.jpg" alt="Image 10">
-                        <img src="./Static/images/ام علي.jpeg" alt="Image 11">
-                        <img src="./Static/images/سموزي بطيخ.webp" alt="Image 12">
-                        <img src="./Static/images/شـــــــاي.webp" alt="Image 13">
-                        <img src="./Static/images/فـــرابتشينو بـندق.jpg" alt="Image 14">
-                        <img src="./Static/images/قهـــوة تــركــي.jpg" alt="Image 15">
-                        <img src="./Static/images/قهوة بندق.webp" alt="Image 16">
-                        <img src="./Static/images/مــولــتن كيــك.jpg" alt="Image 17">
-                        <img src="./Static/images/مهيتــو بلـــوبيـــري.jpg" alt="Image 18">
-                        <img src="./Static/images/مهيتو كلاسيك.jpg" alt="Image 19">
-                        <img src="./Static/images/ميكس فروت.jpg" alt="Image 20">
+                        <img src="./Static/111.jpg" alt="Image 1">
+                        <img src="./Static/222.jpg" alt="Image 2">
+                        <img src="./Static/333.jpg" alt="Image 3">
+                        <img src="./Static/444.jpg" alt="Image 4">
+                        <img src="./Static/555.jpg" alt="Image 5">
+                        <img src="./Static/666.jpg" alt="Image 6">
+                        <img src="./Static/777.jpg" alt="Image 7">
+                        <img src="./Static/888.jpg" alt="Image 8">
+                        <img src="./Static/999.jpg" alt="Image 9">
+                        <img src="./Static/111.jpg" alt="Image 10">
+                        <img src="./Static/222.jpg" alt="Image 11">
+                        <img src="./Static/333.jpg" alt="Image 12">
+                        <img src="./Static/444.jpg" alt="Image 13">
+                        <img src="./Static/555.jpg" alt="Image 14">
+                        <img src="./Static/666.jpg" alt="Image 15">
+                        <img src="./Static/777.jpg" alt="Image 16">
+                        <img src="./Static/888.jpg" alt="Image 17">
+                        <img src="./Static/999.jpg" alt="Image 18">
                     </div>
                 </div>
 
@@ -90,7 +89,7 @@
                         <ion-icon class="back-menus" name="chevron-back-circle-outline"></ion-icon>
                         <ion-icon class="next-menus" name="chevron-forward-circle-outline"></ion-icon>
                     </div> -->
-                    <h2 class="main-title" > قائمة المشروبات </h2>
+                    <h2 class="main-title" > أختار ياباشا اللي تحبه</h2>
                 </div>
 
                 <div class="filter-wrapper">
@@ -173,6 +172,7 @@
                 </a>
                 </div>
             </div>
+            
     
         </div>
     <!----------------------------->
