--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <div class="sidebar">
 
-        <h1 class="logo" href >Egyptian Burger</h1>
+        <h2 class="logo" href > West Elbalad - وسط البلد </h2>
         <div class="sidebar-menus">
             <br>
             <a href="https://www.facebook.com/westelbaladofficial"><ion-icon name="logo-facebook"></ion-icon>صفحتنا ع الفيس</a>
             <a href="https://www.tiktok.com/@westelbalad_official"><ion-icon name="logo-tiktok"></ion-icon>التيك توك بتعنا</a>
             <a href="./Front-end/Pages/order.html"><ion-icon name="checkbox-outline"></ion-icon> كمل طلب </a>
-            <a href="https://wa.me/+201147182463?text=مرحبا اريد التواصل معكم"><ion-icon name="logo-whatsapp"></ion-icon>كلمنا</a>
+            <a href="https://wa.me/+201147182463?text=مرحبا اريد التواصل معكم"><ion-icon name="logo-whatsapp"></ion-icon> كلمنا فأي وقت</a>
             <a href="./Front-end/Pages/about.html"><ion-icon name="people-circle-outline"></ion-icon>إحنا مين؟</a>
             <a href="./Front-end/Pages/feedback.html"><ion-icon name="people-circle-outline"></ion-icon>قولنا رأيك</a>
         </div>
