--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body> 
-
+<!-- 
     <div id="splash-screen">
         <img src="./../../Static/images/اساسيات/start4.png" alt="شعار الموقع">
-    </div>
+    </div> -->
 
     <div class="sidebar">
 
@@ -56,7 +56,7 @@
 
             <div class="main-highlight">
 
-                  <div class="marqueee">
+                  <!-- <div class="marqueee">
                     <div class="marqueee-content">
                         <img src="./Static/111.jpg" alt="Image 1">
                         <img src="./Static/222.jpg" alt="Image 2">
@@ -77,8 +77,14 @@
                         <img src="./Static/888.jpg" alt="Image 17">
                         <img src="./Static/999.jpg" alt="Image 18">
                     </div>
-                </div>
+                </div> -->
 
+
+                <video width="100%" height="100%" autoplay loop>
+                    <source src="./Static/video/0310.mp4" type="video/mp4">
+                    متصفحك لا يدعم علامة الفيديو.
+                </video>
+                  
             </div>
 
             <div class="main-highlight">
