--- a/Front-end/Pages/test.html
+++ b/Front-end/Pages/test.html
@@ -131,17 +131,17 @@
             document.querySelector('.carousel-images').style.transform = `translateX(${newTransform}%)`;
         }
 
-        // إضافة تأثير تكبير وتصغير
-        const images = document.querySelectorAll('.carousel-item img');
-        images.forEach((img, index) => {
-            img.addEventListener('transitionend', () => {
-                if (index === currentIndex) {
-                    img.style.transform = 'scale(1.1)';
-                } else {
-                    img.style.transform = 'scale(0.9)';
-                }
-            });
-        });
+        // // إضافة تأثير تكبير وتصغير
+        // const images = document.querySelectorAll('.carousel-item img');
+        // images.forEach((img, index) => {
+        //     img.addEventListener('transitionend', () => {
+        //         if (index === currentIndex) {
+        //             img.style.transform = 'scale(1.1)';
+        //         } else {
+        //             img.style.transform = 'scale(0.9)';
+        //         }
+        //     });
+        // });
 
         // التحكم باللمس
         let startX;
@@ -154,7 +154,7 @@
             const moveX = event.touches[0].clientX;
             const diffX = startX - moveX;
 
-            if (Math.abs(diffX) > 50) {
+            if (Math.abs(diffX) > 200) {
                 if (diffX > 0) {
                     changeSlide(1); // تمرير لليسار
                 } else {
