--- a/Front-end/Pages/test.html
+++ b/Front-end/Pages/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -5,175 +6,179 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../Static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
     <link rel="icon" href="./../../Static/images/اساسيات/logoooo.png" type="image/x-icon">
     <title>ُEgyptian Burger</title>
     <style>
-    body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+        .carousel {
+            position: relative;
+            height: 100%; /* ارتفاع الكاروسيل */
+            display: flex;
+            justify-content: center; /* لتوسيط العنصر */
+            align-items: center; /* لتوسيع العنصر عموديًا */
+            overflow: hidden; /* إخفاء الصور غير المعروضة */
+        }
 
-.carousel {
-    position: relative;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-}
+        .carousel-images {
+            display: flex;
+            transition: transform 0.5s ease;
+        }
 
-.carousel-images {
-    display: flex;
-    transition: transform 0.5s ease;
-}
+        .carousel-item {
+            min-width: 33.33%; /* عرض كل عنصر */
+            text-align: center; /* لتوسيع النص في المنتصف */
+            transition: transform 0.5s ease;
+        }
 
-.carousel-item {
-    min-width: 100%;
-    transition: transform 0.5s ease;
-    text-align: center;
-}
+        .carousel-item img {
+            width: 90%; /* عرض الصورة */
+            border-radius: 10px;
+            display: block; /* لجعل الصورة عنصر بلوك */
+            margin: 0 auto; /* لتوسيط الصورة */
+            transition: transform 0.5s ease;
+        }
 
-.carousel-item img {
-    width: 100%;
-    border-radius: 10px;
-    transition: transform 0.5s ease;
-}
+        .carousel-item.active img {
+            transform: scale(1); /* زيادة حجم الصورة النشطة */
+        }
 
-.carousel-item p {
-    margin-top: 10px;
-}
+        .carousel-item img.small {
+            transform: scale(0.5); /* حجم الصور الصغيرة */
+        }
+
+        .carousel-item p {
+            margin-top: 10px;
+        }
     </style>
-
 </head>
 
 <body>
-    
     <div class="sidebar">
-
-        <h1 class="logo" href>Egyptian Burger</h1>
+        <h1 class="logo">Egyptian Burger</h1>
         <div class="sidebar-menus">
-            <br>
-            <br>
+            <br><br>
             <a href="./../../index.html"><ion-icon name="home-outline"></ion-icon> القائمة الرئيسية </a>
             <a href="https://www.facebook.com/Techno.Science.TC"><ion-icon name="logo-facebook"></ion-icon> صفحة الفيسبوك</a>
             <a href="https://wa.me/+201147182463?text=مرحبا اريد التواصل معكم"><ion-icon name="logo-whatsapp"></ion-icon>تواصل معنا</a>
         </div>
         <div class="menu-off">
-            <a href="#" class="menu-off" ><ion-icon name="close-outline" ></ion-icon>close</a>
+            <a href="#" class="menu-off"><ion-icon name="close-outline"></ion-icon>close</a>
         </div>
-
     </div>
-
-    <!------------------------------------------------------------>
 
     <div class="main">
+        <div class="main-navbar">
+            <div class="profile">
+                <div class="menu-toggle"><ion-icon name="menu-outline"></ion-icon></div>
+            </div>
+            <div class="img"><img src="../../Static/images/اساسيات/logo.png"></div>
+            <div class="profile"><a class="user" href="./../../index.html"><ion-icon name="arrow-back-outline"></ion-icon></a></div>
+        </div>
 
-    <div class="main-navbar">
-        <div class="profile"> <div class="menu-toggle"><ion-icon name="menu-outline" ></ion-icon></div></div>
-        <div class="img"><img  src="../../Static/images/اساسيات/logo.png"></div>
-        <div class="profile"><a class="user" href="./../../index.html"><ion-icon name="arrow-back-outline"></ion-icon></a></div>
-    </div>
-
-    <!------------------------------------------------------------>
-
-    <div class="carousel" id="carousel">
-        <div class="carousel-images">
-            <div class="carousel-item active">
-                <img src="./../../Static/111.jpg" alt="وصف الصورة 1">
-                <p>وصف الصورة 1</p>
-            </div>
-            <div class="carousel-item">
-                <img src="./../../Static/222.jpg" alt="وصف الصورة 2">
-                <p>وصف الصورة 2</p>
-            </div>
-            <div class="carousel-item">
-                <img src="./../../Static/333.jpg" alt="وصف الصورة 3">
-                <p>وصف الصورة 3</p>
-            </div>
-            <div class="carousel-item">
-                <img src="./../../Static/333.jpg" alt="وصف الصورة 4">
-                <p>وصف الصورة 4</p>
-            </div>
-            <div class="carousel-item">
-                <img src="./../../Static/555.jpg" alt="وصف الصورة 5">
-                <p>وصف الصورة 5</p>
+        <div class="carousel" id="carousel">
+            <div class="carousel-images">
+                <!-- تكرار الصور لجعلها دائرية -->
+                <div class="carousel-item">
+                    <img src="./../../Static/111.jpg" alt="وصف الصورة 1" class="active">
+                    <p>وصف الصورة 1</p>
+                </div>
+                <div class="carousel-item">
+                    <img src="./../../Static/222.jpg" alt="وصف الصورة 2" class="small">
+                    <p>وصف الصورة 2</p>
+                </div>
+                <div class="carousel-item">
+                    <img src="./../../Static/333.jpg" alt="وصف الصورة 3" class="small">
+                    <p>وصف الصورة 3</p>
+                </div>
+                <div class="carousel-item">
+                    <img src="./../../Static/444.jpg" alt="وصف الصورة 4" class="small">
+                    <p>وصف الصورة 4</p>
+                </div>
+                <div class="carousel-item">
+                    <img src="./../../Static/555.jpg" alt="وصف الصورة 5">
+                    <p>وصف الصورة 5</p>
+                </div>
             </div>
         </div>
-    </div>
-    <!------------------------------------------------------------>
-        
     </div>
 
     <script>
-        let currentIndex = 0;
-
-        const carousel = document.getElementById('carousel');
+        let currentIndex = 0; // بدأ من الصورة الأولى
         const items = document.querySelectorAll('.carousel-item');
 
-        function changeSlide(direction) {
-            items[currentIndex].classList.remove('active');
+        function updateCarousel() {
+            items.forEach((item, index) => {
+                const img = item.querySelector('img');
+                item.classList.remove('active');
+                img.classList.remove('small');
 
-            currentIndex += direction;
+                if (index === currentIndex) {
+                    item.classList.add('active');
+                } else if (index === (currentIndex + 1) % items.length || index === (currentIndex + 2) % items.length) {
+                    img.classList.add('small');
+                }
+            });
 
-            if (currentIndex < 0) {
-                currentIndex = items.length - 1;
-            } else if (currentIndex >= items.length) {
-                currentIndex = 0;
-            }
-
-            items[currentIndex].classList.add('active');
-
-            const newTransform = -currentIndex * 100;
+            // تحريك الكاروسيل
+            const newTransform = -currentIndex * 33.33; // حساب التحرك
             document.querySelector('.carousel-images').style.transform = `translateX(${newTransform}%)`;
         }
 
-        // // إضافة تأثير تكبير وتصغير
-        // const images = document.querySelectorAll('.carousel-item img');
-        // images.forEach((img, index) => {
-        //     img.addEventListener('transitionend', () => {
-        //         if (index === currentIndex) {
-        //             img.style.transform = 'scale(1.1)';
-        //         } else {
-        //             img.style.transform = 'scale(0.9)';
-        //         }
-        //     });
-        // });
-
         // التحكم باللمس
         let startX;
+        let moveX;
+        let isMoving = false;
 
-        carousel.addEventListener('touchstart', (event) => {
+        document.getElementById('carousel').addEventListener('touchstart', (event) => {
             startX = event.touches[0].clientX;
+            isMoving = true;
         });
 
-        carousel.addEventListener('touchmove', (event) => {
-            const moveX = event.touches[0].clientX;
-            const diffX = startX - moveX;
+        document.getElementById('carousel').addEventListener('touchmove', (event) => {
+            if (isMoving) {
+                moveX = event.touches[0].clientX;
+                const diffX = startX - moveX;
 
-            if (Math.abs(diffX) > 100) {
-                if (diffX > 0) {
-                    changeSlide(1); // تمرير لليسار
-                } else {
-                    changeSlide(-1); // تمرير لليمين
+                if (Math.abs(diffX) > 50) {
+                    isMoving = false;
+
+                    if (diffX > 0 && currentIndex < items.length - 1) {
+                        currentIndex++; // تمرير لليسار
+                    } else if (diffX < 0 && currentIndex > 0) {
+                        currentIndex--; // تمرير لليمين
+                    }
+                    updateCarousel();
                 }
-                startX = null; // إعادة تعيين
             }
         });
+
+        document.getElementById('carousel').addEventListener('touchend', () => {
+            isMoving = false; // إعادة تعيين
+        });
+
+        // التحكم بالأسهم
+        document.addEventListener('keydown', (event) => {
+            if (event.key === 'ArrowRight' && currentIndex < items.length - 1) {
+                currentIndex++; // تمرير لليسار
+                updateCarousel();
+            } else if (event.key === 'ArrowLeft' && currentIndex > 0) {
+                currentIndex--; // تمرير لليمين
+                updateCarousel();
+            }
+        });
+
+        // تحديث الكاروسيل عند التحميل
+        updateCarousel();
     </script>
 
-    <a href="./../../Front-end/Pages/order.html"><div class="counter"><span> عدد العناصر المحددة: 0 </span><ion-icon name="cart-outline" class="icon-1"></ion-icon></div></a>
-
-</body>
+    <a href="./../../Front-end/Pages/order.html">
+        <div class="counter"><span> عدد العناصر المحددة: 0 </span><ion-icon name="cart-outline" class="icon-1"></ion-icon></div>
+    </a>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="./../../Back-end/JavaScript.js"></script>
     <script src="./../../Back-end/script.js"></script>
-    <script src="./../../Back-end/app.js"></script>     
-
+    <script src="./../../Back-end/app.js"></script>
+</body>
 </html>
