--- a/Front-end/Pages/AuthPage.html
+++ b/Front-end/Pages/AuthPage.html
@@ -38,10 +38,10 @@
     </div>
     <!------------------------------------------------------------>
 
-    <br><h2 class="section__header">مرحباً بك </h2><br>
+    <br><h2 class="section__header" style="background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; padding-top: 15px;  padding-bottom: 15px;">مرحباً بك </h2><br>
 
     <form id="loginForm">
-        <h4>برجاء تسجيل الدخول اولا لتتمكن من التعديل  </h4><br>
+        <h4  style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px;">برجاء تسجيل الدخول اولا لتتمكن من التعديل  </h4><br>
         <input type="text" id="username" name="username" placeholder="أدخل أسم المستخدم">
         <br>
         <input type="text" id="password" name="password" placeholder="أدخل كلمة المرور">
