--- a/Front-end/Pages/Profile.html
+++ b/Front-end/Pages/Profile.html
@@ -37,13 +37,13 @@
     </div>
     <!------------------------------------------------------------>
     <div  style="display: flex; justify-content: center; align-items: center; width: 100px; margin-left: 35vw; margin-top: 10%;">
-    <img src="./../../Static/images/اساسيات/logoooo.png"></div>
-    <br><h2 class="section__header">T.S Dashbord</h2>
-    <h1 style="text-align: center; " >مرحباً بك يا  <span id="username"></span></h1><br>
-    <button id="Orders" class="WhatsApp">   طلبات العملاء   </button><br>
-    <button id="feedbacks" class="WhatsApp">  أراء العملاء  </button><br>
-    <button id="TableOfElement" class="telegram">  جداول قوائم الطعام  </button><br>
-    <button id="logoutButton" class="delete-btn">  تسجيل الخروج  </button><br>
+    <img src="./../../Static/images/اساسيات/logoooo.png" ></div>
+    <h2 class="section__header" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 20px;">T.S Dashbord</h2>
+    <h1 style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;">مرحباً بك يا  <span id="username"></span></h1>
+    <button id="Orders" class="WhatsApp" style="margin-top: 20px;">   طلبات العملاء   </button>
+    <button id="feedbacks" class="WhatsApp"  style="margin-top: 10px;">  أراء العملاء  </button>
+    <button id="TableOfElement" class="telegram"  style="margin-top: 10px;">  جداول قوائم الطعام  </button>
+    <button id="logoutButton" class="delete-btn"  style="margin-top: 10px;">  تسجيل الخروج  </button><br>
 
     <br>  
 
