--- a/Front-end/Pages/TableOfElements.html
+++ b/Front-end/Pages/TableOfElements.html
@@ -36,8 +36,8 @@
             <div class="profile"><a class="user" href="./Profile.html"><ion-icon name="arrow-back-outline"></ion-icon></a></div>
         </div>
         <!------------------------------------------------------------>
-        <br><h2 class="section__header">جدول القوائم  </h2>
-        <h3 style="text-align: center;" > للذهاب بشكل مباشر لجدول البيانات  </h3><hr>
+        <br><h2 class="section__header" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;">جدول القوائم  </h2>
+        <h3 style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;" > للذهاب بشكل مباشر لجدول البيانات  </h3><hr>
 
         <button id="Table1" class="telegram"> قائمة المشروبات الساخنة </button><hr>
         <button id="Table2" class="telegram"> قائمة المشروبات الغازية  </button><hr>
