--- a/Front-end/Pages/feedbackmanger.html
+++ b/Front-end/Pages/feedbackmanger.html
@@ -37,8 +37,8 @@
     </div>
     <!------------------------------------------------------------>
 
-    <br><h2 class="section__header">أراء العملاء</h2>
-    <h3 style="text-align: center;" > أحرص علي سريه بيانات العملاء </h3><br>
+    <br><h2 class="section__header" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;">أراء العملاء</h2>
+    <h3 style=" text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;"> أحرص علي سريه بيانات العملاء </h3><br>
     <button id="scrollToBottomBtn" class="WhatsApp"> احدث الأراء </button><br>
     <div id="data-container"></div>
     <button id="scrollToBottomBtn1" class="WhatsApp"> اعادة تحمل الصفحة </button><br>
