--- a/Front-end/Pages/location.html
+++ b/Front-end/Pages/location.html
@@ -39,20 +39,20 @@
     </div>
 
     <!------------------------------------------------------------>
-
     <div class="footer__content">
         <div>
-            <h1> عنوان المطعم </h1>
-            <br>
-            <ul class="footer__links">
+            <h1 style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; "><svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-top: 2px;" viewBox="0 0 24 24" width="48" height="48" fill="currentColor"><path d="M2 5L9 2L15 5L21.303 2.2987C21.5569 2.18992 21.8508 2.30749 21.9596 2.56131C21.9862 2.62355 22 2.69056 22 2.75827V19L15 22L9 19L2.69696 21.7013C2.44314 21.8101 2.14921 21.6925 2.04043 21.4387C2.01375 21.3765 2 21.3094 2 21.2417V5ZM16 19.3955L20 17.6812V5.03308L16 6.74736V19.3955ZM14 19.2639V6.73607L10 4.73607V17.2639L14 19.2639ZM8 17.2526V4.60451L4 6.31879V18.9669L8 17.2526Z" ></path></svg> عنوان المطعم </h1>
+            <ul class="footer__links" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin-top: 10px;">
                 <li>
-                    <div class="cart" href="#"><ion-icon name="location-outline" class="icon-loc"></ion-icon></div>    
-                    <h2>( جزيرة الزمالك )</h2>
+                    <div class="cart" href="#"></div>    
+                    <h2 > ( شبرا الخيمة  )</h2>
                 </li>
-                <p> Cairo Tower </p>
+                <p> ٣ شارع ١٥ مايو أول كوبري مسطرد  </p>
             </ul>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d534.5780982601019!2d31.22438088015066!3d30.046092699542015!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145840d09a00968d%3A0xaa720fcf00607f65!2zQ2Fpcm8gVG93ZXIsINin2YTYstmF2KfZhNmD2Iwg2YXYrdin2YHYuNipINin2YTZgtin2YfYsdip4oCs!5e1!3m2!1sar!2seg!4v1740022845946!5m2!1sar!2seg" width="100%" height="450px" style=" border:30; border-radius: 30px;"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d755.3569916560874!2d31.286225251617427!3d30.131228210866453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z2aMg2LTYp9ix2Lkg2aHZpSDZhdin2YrZiCDYo9mI2YQg2YPZiNio2LHZiiDZhdiz2LfYsdivICwg2LTYqNix2Kcg2KfZhNiu2YrZhdipICwg2KjYrNmI2KfYsSDZg9mG2KrYp9mD2YosIENhaXJvLCBFZ3lwdCwgMTM3NjY!5e1!3m2!1sen!2seg!4v1742277937211!5m2!1sen!2seg"  width="100%" height="450px" style=" border:30; border-radius: 30px; border-color: #647953;"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <br>
+
     </div>
     
     <!------------------------------------------------------------>
