--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./Static/images/اساسيات/logoooo.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-    <title>West Elbalad</title>
+    <title>West Elbalad</title> 
 </head>
 
 <body> 
@@ -41,10 +41,11 @@
     <div class="main">
 
     <div class="main-navbar">
-        <div class="profile"> <div class="menu-toggle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M5 5H13V19H5V5ZM19 19H15V5H19V19ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21H20C20.5523 21 21 20.5523 21 20V4C21 3.44772 20.5523 3 20 3H4ZM7 12L11 8.5V15.5L7 12Z"></path></svg></div></div>
+        <div class="profile">  <div class="menu-toggle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M5 5H13V19H5V5ZM19 19H15V5H19V19ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21H20C20.5523 21 21 20.5523 21 20V4C21 3.44772 20.5523 3 20 3H4ZM7 12L11 8.5V15.5L7 12Z"></path></svg></div></div>
         <div class="img"><img  src="./Static/images/اساسيات/logo.png"></div>
         <div class="profile"> <a href="./Front-end/Pages/location.html" class="user"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32" fill="currentColor"><path d="M12 20.8995L16.9497 15.9497C19.6834 13.2161 19.6834 8.78392 16.9497 6.05025C14.2161 3.31658 9.78392 3.31658 7.05025 6.05025C4.31658 8.78392 4.31658 13.2161 7.05025 15.9497L12 20.8995ZM12 23.7279L5.63604 17.364C2.12132 13.8492 2.12132 8.15076 5.63604 4.63604C9.15076 1.12132 14.8492 1.12132 18.364 4.63604C21.8787 8.15076 21.8787 13.8492 18.364 17.364L12 23.7279ZM12 13C13.1046 13 14 12.1046 14 11C14 9.89543 13.1046 9 12 9C10.8954 9 10 9.89543 10 11C10 12.1046 10.8954 13 12 13ZM12 15C9.79086 15 8 13.2091 8 11C8 8.79086 9.79086 7 12 7C14.2091 7 16 8.79086 16 11C16 13.2091 14.2091 15 12 15Z"></path></svg></a></div>
     </div>
+    
     <!------------------------------------------------------------>
 
     <section>
@@ -53,8 +54,8 @@
 
 
 
-            <div class="marquee-container">
-                <div class="marquee-content">
+            <div class="marquee-container"  style="border-radius: 7px;" >
+                <div class="marquee-content" >
                   </div>
               </div>
 
@@ -69,7 +70,7 @@
 
             <div class="main-highlight" id="lll">
                 <div style="position: relative;">
-                    <video id="myVideo" width="100%" height="100%" autoplay muted loop>
+                    <video id="myVideo" style="border-radius: 10px;" width="100%" height="100%" autoplay muted loop >
                         <source src="./Static/video/0310.mp4" type="video/mp4">
                     </video>
                     <button id="muteButton" style="position: absolute; top: 10px; right: 10px; background: none; border: none; cursor: pointer; ">
@@ -94,22 +95,22 @@
                 <div class="carousel1" id="carousel1" style="display: none;">
                     <div class="carousel1-images" >
                         <div class="carousel1-item" >
-                            <a  href="./Front-end/Menus/Hot_drinks.html">
+                            <a  href="./Front-end/Menus/Wgbat.html">
                             <img src="./Static/images/ايكون القوائم/111.jpg"  alt="  999" class="active">
                             <p>وجبات</p></a>
                         </div>
                         <div class="carousel1-item">
-                            <a href="./Front-end/Menus/Cocktails.html">
-                            <img src="./Static/images/ايكون القوائم/444.jpg" alt="وصف الصورة 4" class="small">
+                            <a href="./Front-end/Menus/Twagen.html">
+                            <img src="./Static/images/ايكون القوائم/222.jpg" alt="وصف الصورة 4" class="small">
+                            <p> طواجن</p></a>
+                        </div>
+                        <div class="carousel1-item">
+                            <a href="./Front-end/Menus/Swany.html">
+                            <img src="./Static/images/ايكون القوائم/444.jpg" alt="وصف الصورة 2" class="small">
                             <p>صواني</p></a>
                         </div>
                         <div class="carousel1-item">
-                            <a href="./Front-end/Menus/Soft_drinks.html">
-                            <img src="./Static/images/ايكون القوائم/222.jpg" alt="وصف الصورة 2" class="small">
-                            <p>طواجن</p></a>
-                        </div>
-                        <div class="carousel1-item">
-                            <a href="./Front-end/Menus/Smoothie_drinks.html" >
+                            <a href="./Front-end/Menus/Moqaplat.html" >
                             <img src="./Static/images/ايكون القوائم/333.jpg" alt="وصف الصورة 3" class="small">
                             <p> مقبلات</p></a>
                         </div>
@@ -118,26 +119,31 @@
 
                 <div class="carousel" id="carousel" style="display: none;" >
                     <div class="carousel-images">
+
                         <div class="carousel-item" >
-                            <a  href="./Front-end/Menus/Hot_drinks.html">
+                            <a  href="./Front-end/Menus/HotD.html">
                             <img src="./Static/images/ايكون القوائم/1111.jpg"  alt="وصف الصورة 1" class="active">
                             <p>  سخن  </p></a>
                         </div>
+
                         <div class="carousel-item">
-                            <a href="./Front-end/Menus/Soft_drinks.html">
+                            <a href="./Front-end/Menus/Frish.html">
                             <img src="./Static/images/ايكون القوائم/4444.jpg" alt="وصف الصورة 2" class="small">
                             <p>  فريش  </p></a>
                         </div>
+
                         <div class="carousel-item">
-                            <a href="./Front-end/Menus/Smoothie_drinks.html" >
+                            <a href="./Front-end/Menus/helw.html" >
                             <img src="./Static/images/ايكون القوائم/3333.jpg" alt="وصف الصورة 3" class="small">
                             <p>  حلو  </p></a>
                         </div>
+
                         <div class="carousel-item">
-                            <a href="./Front-end/Menus/Cocktails.html">
+                            <a href="./Front-end/Menus/Various_drinks.html">
                             <img src="./Static/images/ايكون القوائم/2222.jpg" alt="وصف الصورة 4" class="small">
                             <p>  مشروبات متنوعة  </p></a>
                         </div>
+
                     </div>
                 </div> 
 
@@ -499,6 +505,8 @@
    
    </script>
 
+
+    
 </body>
 
     <script src="https://unpkg.com/scrollreveal"></script>
