--- a/Front-end/Pages/feedback.html
+++ b/Front-end/Pages/feedback.html
@@ -91,8 +91,7 @@
     </div>
     
     <script>
-        const scriptURL =                       
-        "https://script.google.com/macros/s/AKfycbyIkzNLs0_tVkmbDjb81I6knaIyCa_ZMUgt8kuB3XU3yzGvapA1NRyGLaUO3nLyE6c/exec";
+        const scriptURL = "https://script.google.com/macros/s/AKfycbySDOrdAj5PDJu1PnJsfcnFpYkcBASsNdDe7fA5fqaKodLxD5TulzIi_mCh7Jz3ZQ/exec";
         const form = document.forms["submit-to-google-sheet"];
         form.addEventListener("submit", (e) => {
           e.preventDefault();
