--- a/Front-end/Pages/feedbackmanger.html
+++ b/Front-end/Pages/feedbackmanger.html
@@ -46,8 +46,7 @@
 
     <br>
     <script>
-
-        const sheetID = '1uInyI065CuO2cgFvq8OrrUzLJzZvR0TKJ_7kWh4L_98';
+        const sheetID = '1mIbqIaGDCGEogmeZ76_RQc-Y1xUKc_oFo1Z9Vxy9w_8';
         const base = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json`;
 
         fetch(base)
@@ -146,9 +145,9 @@
         });
         });
         const scrollToBottomBtn1 = document.getElementById('scrollToBottomBtn1');
-        scrollToBottomBtn1.addEventListener('click', () => { location.reload(); });
+        scrollToBottomBtn1.addEventListener('click', () => { location.reload(); });  
         const Table1 = document.getElementById('Table1');
-        Table1.addEventListener('click', () => {  window.location.href = 'https://docs.google.com/spreadsheets/d/1uInyI065CuO2cgFvq8OrrUzLJzZvR0TKJ_7kWh4L_98/edit?usp=drive_link';  });
+        Table1.addEventListener('click', () => {  window.location.href = 'https://docs.google.com/spreadsheets/d/1mIbqIaGDCGEogmeZ76_RQc-Y1xUKc_oFo1Z9Vxy9w_8/edit?usp=sharing';  });
          
     </script>
 
