--- a/Front-end/Menus/Swany.html
+++ b/Front-end/Menus/Swany.html
@@ -77,7 +77,7 @@
 
           drinksList.innerHTML += `
             <div class="destination__card" onclick="addToCart('${drinkType}', '${drinkPrice}')">
-              <img src="${drinkImage}" alt="${drinkType}" /><h5 style="color:#ffffff; padding: 0px; margan:0px">${drinkdetails}</h5>
+              <img src="${drinkImage}" alt="${drinkType}" /><h5 style="color:#ffffff; padding-right: 20px; padding-left: 20px; margan:0px">${drinkdetails}</h5>
               <div class="destination__details">
                 <div class="menu-item">
                   <h4>${drinkType}</h4>
