--- a/Front-end/Menus/Various_drinks.html
+++ b/Front-end/Menus/Various_drinks.html
@@ -109,14 +109,15 @@
         <div class="dropdown">
           <button class="dropbtn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" fill="currentColor"><path d="M20 4V16H23L19 21L15 16H18V4H20ZM12 18V20H3V18H12ZM14 11V13H3V11H14ZM14 4V6H3V4H14Z"></path></svg> قائمة المشروبات </button>
           <div class="dropdown-content">
-            <a href="#drinks-list">   قائمة الميلك تشيك   </a>  <a href="#drinks-list1">   قائمة الموكتيلز   </a>  
+            <a href="#drinks-list11">   قائمة الميلك تشيك   </a>  <a href="#drinks-list1">   قائمة الموكتيلز   </a>  
             <a href="#drinks-list2">  قائمة مشروبات الشتاء   </a>  <a href="#drinks-list3">  قائمة  الفرابيه    </a>
             <a href="#drinks-list4">   قائمة السوفت درينك    </a>  <a href="#drinks-list5">   قائمة السموزي    </a>
             <a href="#drinks-list6">   قائمة  الايس كوفي   </a>  <a href="#drinks-list7">    </a>
           </div>
         </div><br><br>
 
-      <p id="drinks-list" style="font-size: 25px; text-align: center; background-color: #00BFFF;font-weight: bold; border-radius: 15px; color: white; padding: 15px;  padding-bottom:15px;">    قائمة الميلك تشيك   </p>  
+      <p id="drinks-list11" style="font-size: 25px; text-align: center; background-color: #00BFFF;font-weight: bold; border-radius: 15px; color: white; padding: 15px;  padding-bottom:15px;">    قائمة الميلك تشيك   </p>  
+
       <div id="drinks-list" class="destination__grid"></div> 
 
       <div id="drinks-list1" class="destination__grid"></div>  <br>    
