--- a/Front-end/Pages/about.html
+++ b/Front-end/Pages/about.html
@@ -39,13 +39,11 @@
 
     <div class="footer__content">
         <div>
-            <img src="./../../Static/images/اساسيات/logoooo.png" class="about-img">
-            <h1 >مرحبا بك </h1>
+            <img src="./../../Static/images/اساسيات/logoooo.png" class="about-img"><br>
+            <h1 style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin: 15px;">مرحبا بك </h1>
             <ul class="footer__links">
-                <div class="about" ><ion-icon name="-outline" class="icon-loc"></ion-icon></div>    
-                <h3 class="about-content" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px;">مرحباً بك في عائلتنا برجر المصريين لدينا شغف واحد: إسعادكم. نقدم لكم تجربة طعام فريدة، حيث نجمع بين المذاق اللذيذ والضيافة الحارة. نحن أكثر من مجرد كافيه نحن مكان لتجمع الأصدقاء والعائلة.
-
-                </h3>
+            <h3 class="about-content" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding: 15px;">مرحباً بك في عائلتنا وسط البلد لدينا شغف واحد: إسعادكم. نقدم لكم تجربة طعام فريدة، حيث نجمع بين المذاق اللذيذ والضيافة الحارة. نحن أكثر من مجرد كافيه نحن مكان لتجمع الأصدقاء والعائلة.
+            </h3>
             </ul>
         </div>
     </div>
