--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="journey__card">
             <div class="journey__card__bg">
             <h4>عرض</h4>
-            
+            <h4 id="offer_1"></h4>
             </div>
             <div class="journey__card__content">
             <p id="offer_content_1">
