--- a/Front-end/Pages/feedback.html
+++ b/Front-end/Pages/feedback.html
@@ -36,7 +36,7 @@
         </div>
         <!------------------------------------------------------------>
         <br><br>
-        <h1 class="title-ordero"> أدخل رأيك </h1>
+        <h1 class="title-ordero" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin: 15px;"> أدخل رأيك </h1>
 
         <form id="submit-to-google-sheet">
             
