--- a/Front-end/Pages/order.html
+++ b/Front-end/Pages/order.html
@@ -37,10 +37,10 @@
 
         <div>
             <br><br>
-            <h1 class="title-ordero"> اكمل عملية الطلب </h1>
-            <h3 id="order" placeholder="ادخل طلبك" class="title-order"></h3>
+            <h1 class="title-ordero" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin: 15px;"> اكمل عملية الطلب </h1>
+            <h3 id="order" placeholder="ادخل طلبك" class="title-order" style="text-align: center; background-color: rgba(0, 0, 0, 0.716); border-radius: 15px; color: white; padding-top: 15px;  padding-bottom: 15px; margin: 15px;" ></h3>
             <br>
-            <h3 id="totalPrice">السعر الإجمالي: 0</h3>
+            <h3 id="totalPrice" >السعر الإجمالي: 0</h3>
 
             <input type="text" id="name" placeholder="ادخل اسمك" required>
             <br>
