--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="main-highlight">
 
                 <div class="main-header"  style="display: flex; justify-content: center; align-items: center; margin-bottom: 10px; margin-left: 10px;  font-weight: bold; font-size: 30px;">
-                    <p class="main-title" >  تحب اي دلوقتي؟ </p>
+                    <p class="main-title" >  تحب اية دلوقتي؟ </p>
                 </div>
 
                 
